[tool.poetry]
name = "json_helper"
version = "0.1.0"
description = ""
authors = ["Zakhar Koryagin <koryagin.03@bk.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.10.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
